# RLPP-V1

RLPP-master/C++_Ver/Phase_1/: CMakeLists.txt
RLPP-master/C++_Ver/Phase_1/data/: test.csv  test_output.csv
RLPP-master/C++_Ver/Phase_1/source/: F1_rat01_bundle.cpp  F1_rat01_parity.cpp  F1_rat01_validate.cpp  RLPP_inference.cpp  csv_utils.cpp  decoder_history_buffer.cpp  decoding_model01.cpp  exponential_history_encoder.cpp  hardware_frame_v1.cpp  hardware_udp_loopback_main.cpp  main.cpp  math_functions.cpp  replay_runner.cpp  rlpp_hardware_output.cpp  rlpp_phase1_cli.cpp  rlpp_realtime_udp_infer_main.cpp  two_layer_mlp.cpp  upstream_frame_v1.cpp
RLPP-master/C++_Ver/Phase_3/: CMakeLists.txt
RLPP-master/C++_Ver/Phase_3/_export_test/: decoder_W1.csv  decoder_features_ref.csv  decoder_logits_ref.csv  encoder_features_ref.csv  generator_W1.csv  generator_W2.csv  generator_probs_ref.csv  phase3_export_manifest.txt  sortedIndices.csv
RLPP-master/C++_Ver/Phase_3/decoding_params/: decoding01_b1.csv  decoding01_b2.csv
RLPP-master/C++_Ver/Phase_3/full_loop_decoding01_case/: W1_after_ep0.csv  W1_after_ep1.csv  W1_after_ep3.csv  W2_after_ep3.csv  W2_after_ep4.csv  W2_init.csv  dW1_ep0.csv  dW1_ep1.csv  dW1_ep2.csv  dW1_ep3.csv  dW1_ep4.csv  dW2_ep1.csv  dW2_ep3.csv  decoder_prefix.txt  hidden_ep0.csv  hidden_ep1.csv  hidden_ep2.csv  hidden_ep4.csv  indexes.csv  p_ep1.csv  p_ep2.csv  p_ep4.csv  smoothed_ep1.csv  spk_ep2.csv  u01_ep1.csv  u01_ep2.csv  u01_ep3.csv  u01_ep4.csv
RLPP-master/C++_Ver/Phase_3/full_loop_decoding02_case/: W1_after_ep2.csv  W1_after_ep4.csv  W1_init.csv  W2_after_ep0.csv  W2_after_ep1.csv  W2_after_ep2.csv  batchActions.csv  dW2_ep0.csv  dW2_ep2.csv  dW2_ep4.csv  decoder_prefix.txt  hidden_ep3.csv  input_unit.csv  model_name.txt  p_ep0.csv  p_ep3.csv  priori_params.csv  spk_ep0.csv  spk_ep1.csv  spk_ep3.csv  spk_ep4.csv  success_ep0.csv  u01_ep0.csv
RLPP-master/C++_Ver/Phase_3/full_loop_emulator_case/: W1_after_ep0.csv  W1_after_ep1.csv  W1_after_ep2.csv  W1_after_ep3.csv  W1_after_ep4.csv  W2_after_ep0.csv  W2_after_ep1.csv  W2_after_ep2.csv  W2_after_ep3.csv  W2_after_ep4.csv  W2_init.csv  dW1_ep0.csv  dW1_ep1.csv  dW1_ep2.csv  dW1_ep3.csv  dW1_ep4.csv  dW2_ep0.csv  dW2_ep1.csv  dW2_ep2.csv  dW2_ep3.csv  dW2_ep4.csv  hidden_ep0.csv  hidden_ep1.csv  hidden_ep2.csv  hidden_ep3.csv  hidden_ep4.csv  indexes.csv  input_unit.csv  motor_perform_ep0.csv  motor_perform_ep3.csv  motor_perform_ep4.csv  p_ep0.csv  p_ep1.csv  p_ep2.csv  p_ep3.csv  p_ep4.csv  smoothed_ep0.csv  smoothed_ep3.csv  smoothed_ep4.csv  spk_ep0.csv  (+11 more)
RLPP-master/C++_Ver/Phase_3/loader_emulator_case/: M1_truth.csv  batchActions.csv  batchInput.csv  batchM1_truth.csv  decoding01_LW2_1.csv  decoding02_IW1_1.csv  decoding02_LW2_1.csv  decoding02_b1.csv  decoding02_b2.csv  opt_meta.csv  real01_ensemble.csv  real01_indexes.csv  real01_motorExpect.csv  real01_motorPerform.csv  real01_spikes.csv  real01_success.csv  real02_ensemble.csv  real02_indexes.csv  real02_spikes.csv  real02_success.csv  real_ensemble.csv  real_indexes.csv  real_motorExpect.csv  real_motorPerform.csv  real_rate.csv  real_spikes.csv  real_success.csv  simu_motorExpect.csv  simu_motorPerform.csv  simu_rate.csv  simu_spikes.csv  simu_success.csv  time_indexes.csv
RLPP-master/C++_Ver/Phase_3/run_case_decoding01/: W1_after_ep2.csv  W1_after_ep3.csv  W2_after_ep1.csv  W2_init.csv  dW1_ep3.csv  dW2_ep0.csv  dW2_ep1.csv  dW2_ep2.csv  dW2_ep3.csv  dW2_ep4.csv  hidden_ep0.csv  hidden_ep1.csv  hidden_ep3.csv  hidden_ep4.csv  inputEnsemble.csv  inputUnit_ep1.csv  inputUnit_ep3.csv  model_name.txt  p_ep2.csv  reward_params.csv  smoothed_ep1.csv  smoothed_ep2.csv  spk_ep1.csv  spk_ep3.csv  spk_ep4.csv  suc_rate_ep1.csv  suc_rate_ep2.csv  success_ep1.csv  u01_ep2.csv
RLPP-master/C++_Ver/Phase_3/run_case_decoding02/: Actions.csv  W1_after_ep0.csv  W1_after_ep1.csv  W1_after_ep4.csv  W1_init.csv  W2_after_ep0.csv  W2_after_ep2.csv  W2_after_ep3.csv  W2_after_ep4.csv  batchInput_ep0.csv  batchInput_ep3.csv  batchM1Truth_ep3.csv  dW1_ep0.csv  dW1_ep1.csv  dW1_ep2.csv  dW1_ep4.csv  hidden_ep2.csv  indexes.csv  p_ep0.csv  p_ep1.csv  p_ep3.csv  p_ep4.csv  smoothed_ep3.csv  spk_ep0.csv  spk_ep2.csv  success_ep3.csv  success_ep4.csv  u01_ep0.csv  u01_ep1.csv  u01_ep3.csv  u01_ep4.csv
RLPP-master/C++_Ver/Phase_3/run_case_manual/: Trials.csv  W1_after_ep0.csv  W1_after_ep1.csv  W1_after_ep2.csv  W1_after_ep3.csv  W1_after_ep4.csv  W2_after_ep0.csv  W2_after_ep1.csv  W2_after_ep2.csv  W2_after_ep3.csv  W2_after_ep4.csv  W2_init.csv  batchActions_ep1.csv  batchActions_ep2.csv  batchActions_ep3.csv  batchInput_ep1.csv  batchM1Truth_ep1.csv  batchM1Truth_ep4.csv  case_dir.txt  dW1_ep0.csv  dW1_ep1.csv  dW1_ep2.csv  dW1_ep3.csv  dW1_ep4.csv  dW2_ep0.csv  dW2_ep1.csv  dW2_ep2.csv  dW2_ep3.csv  dW2_ep4.csv  hidden_ep1.csv  hidden_ep2.csv  hidden_ep3.csv  hidden_ep4.csv  indexes.csv  inputUnit_ep2.csv  model_name.txt  motor_perform_ep2.csv  motor_perform_ep3.csv  motor_perform_ep4.csv  p_ep0.csv  (+21 more)
RLPP-master/C++_Ver/Phase_3/source/: rlpp_dataloader.cpp  rlpp_decoding_params.cpp  rlpp_emulator.cpp  rlpp_phase3_export_inference_bundle.cpp  rlpp_phase3_full_loop_emulator_verify.cpp  rlpp_phase3_full_loop_trained_decoder_verify.cpp  rlpp_phase3_loader_emulator_verify.cpp  rlpp_phase3_main.cpp  rlpp_phase3_run_case_verify.cpp  rlpp_phase3_run_main.cpp  rlpp_phase3_trainer_main.cpp  rlpp_phase3_training_case_parity.cpp  rlpp_training_math.cpp
RLPP-master/C++_Ver/Phase_3/testdata/: W1.csv  W2.csv  expected_rl_delta1.csv  expected_rl_delta2.csv  input_unit.csv  meta.txt  motor_perform.csv  reward_params.csv  rl_hidden_unit.csv  rl_p_output.csv  (+3 more)
(+147 files in other folders)
